--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,6 @@
-bitarray
-bitstring
-blinker
-certifi
-cffi
-charset-normalizer
-click
-colorama
-contourpy
-
-cryptography
-cycler
-docker
-ecdsa
-esptool
-Flask
-fonttools
-gunicorn
-idna
-intelhex
-itsdangerous
-Jinja2
-joblib
-kiwisolver
-m2cgen
-MarkupSafe
-matplotlib
-numpy
-packaging
-pandas
-pillow
-pycparser
-pyparsing
-pyserial
-python-dateutil
-pytz
-PyYAML
-reedsolo
-requests
-scikit-learn
-scipy
-setuptools
-six
-threadpoolctl
-tzdata
-urllib3
-Werkzeug
+flask>=2.0.0
+tensorflow>=2.8.0
+torch>=1.10.0
+torchvision>=0.11.0
+numpy>=1.21.0
+Pillow>=8.0.0
