--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-flask>=2.0.0
-tensorflow>=2.8.0
-torch>=1.10.0
-torchvision>=0.11.0
-numpy>=1.21.0
-Pillow>=8.0.0
+flask
+tensorflow
+torch
+torchvision
+numpy
+Pillow
